--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -29,12 +29,12 @@
 
   <!-- <div class="flex-center" href = size = "small">Edit</div> -->
   <p class="flex-center">
-    <ion-card class="ion-text-center">
+    <ion-card class="ion-text-center zoom-card">
       <ion-card-header>
         <ion-card-subtitle>Bio</ion-card-subtitle>
       </ion-card-header>
-    
-      <ion-card-content>
+
+      <ion-card-content class="bio-content">
         {{myBio$}}
       </ion-card-content>
     </ion-card>
@@ -53,7 +53,7 @@
  <br>
  <br>
 
-  <div class="flex-center"> 
+  <div class="flex-center">
     <ion-card class="card">
       <ion-card-content>
         <ion-button class="button" expand="block" routerLink="/fitnessgoals"><ion-icon name="american-football-outline" slot = "start"></ion-icon>Goals<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
