Personal Best view Ui refactor(bugfix)

--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -67,7 +67,7 @@
                       </ion-note>
                     </ion-item>
                     <ion-item-options side="end">
-                      <ion-item-option color="danger" expandable (click)="confirmDelete(personalBest)">
+                      <ion-item-option color="danger" (click)="confirmDelete(personalBest)">
                         Delete
                       </ion-item-option>
                     </ion-item-options>
