groups search added

--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -57,13 +57,13 @@
           </div>
           <ion-label class="profile-label">
             <div class="name">
-              {{group.displayName}}
+              {{group.displayName}}.
             </div>
             <div class="members">
-              {{group.members?.length}} Members
+             <p>{{group.members?.length}} Members.</p>
             </div>
             <div class="bio">
-              {{group.bio}}
+              <p>{{group.bio}}.</p>
             </div>
           </ion-label>
         </div>
