--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.scss
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.scss
@@ -45,6 +45,9 @@ ion-label div, .profile-img-container  {
 
 .profile-label {
     font-weight: bolder;
+    p {
+        font-style: italic;
+    }
 }
 
 .item-header {
