--- a/src/app/pages/search/group/group.component.html
+++ b/src/app/pages/search/group/group.component.html
@@ -19,7 +19,7 @@
           {{ suggestion.displayName }}
         </ion-item>
         <ion-item lines="none" *ngIf="showNoResults && this.searchTerms.filteredSuggestions!.length==0">
-          <ion-text>No users found</ion-text>
+          <ion-text>No groups found</ion-text>
         </ion-item>
       </ion-list>
     </ion-card>
