search distance chnage fix

--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -20,7 +20,7 @@
 
 <ion-item>
   <ion-label position="stacked">Search Radius (km): </ion-label>
-  <ion-input type="number" [(ngModel)]="maxDistance" (ionInput)="searchNearbyGyms()"></ion-input>
+  <ion-input type="number" [(ngModel)]="maxDistance" (ionInput)="loadData()"></ion-input>
 </ion-item>
 
 <ion-item>
