--- a/src/app/pages/messages/chatbox/chatbox.component.scss
+++ b/src/app/pages/messages/chatbox/chatbox.component.scss
@@ -34,5 +34,29 @@
 
 .message-sender {
     font-style: italic;
-    margin-bottom: 12px;
+    font-weight: bolder;
 }
+
+.smaller-item {
+    --background: transparent;
+    font-size: 0.7rem;
+    padding: 0px;
+}
+
+ion-avatar {
+    width: 1.2rem;
+    height: 1.2rem;
+}
+
+// ion-spinner {
+//     --color: #A8DADC;
+//     width: 1.2rem;
+//     height: 1.2rem;
+// }
+
+// .loader-wrapper {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     height: 100%;
+//   }
