--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -29,67 +29,10 @@
 
   <ion-modal #modal trigger="group-name">
     <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="start">
-            <!-- <ion-icon name="arrow-back" (click)="modal.dismiss()" slot="start"></ion-icon> -->
-            <ion-button (click)="modal.dismiss()">close</ion-button>
-          </ion-buttons>
-          <ion-title>
-            <ion-chip>
-              <ion-avatar>
-                <ion-img [src]="group.profileURL"></ion-img>
-              </ion-avatar>
-              <ion-label>
-                {{group.displayName}}
-              </ion-label>
-            </ion-chip>
-          </ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-       <div class="profile-outer-wrapper">
-        <div class="profile-inner-wrapper">
-          <div class="profile-img-container">
-            <ion-avatar class="profile-image">
-              <ion-img [src]="group.profileURL"></ion-img>
-            </ion-avatar>
-          </div>
-          <ion-label class="profile-label">
-            <div class="name">
-              {{group.displayName}}.
-            </div>
-            <div class="members">
-             <p>{{group.members?.length}} Members.</p>
-            </div>
-            <div class="bio">
-              <p>{{group.bio}}.</p>
-            </div>
-          </ion-label>
-        </div>
-
-        <ion-card>
-          <ion-item class="item-header"> 
-            <ion-icon name="people-outline"></ion-icon>
-            <ion-text>Members</ion-text>
-            <ion-button slot="end" (click)="showMembers()" *ngIf="!isShowMembers">view</ion-button>
-            <ion-button slot="end" (click)="showMembers()" *ngIf="isShowMembers">close</ion-button>
-          </ion-item>
-          <div class="content" *ngIf="isShowMembers">
-            <ion-list>
-              <group-user *ngFor="let userId of group.members"
-              [userId]="userId"
-              [currentUserId]="currentUserId"></group-user>
-            </ion-list>
-          </div>
-          <div *ngIf="!isShowMembers">
-            <ion-item lines="none">
-              <ion-icon name="people" slot="end"></ion-icon>
-              <ion-text slot="end">{{group.members?.length}}</ion-text>
-            </ion-item>
-          </div>
-        </ion-card>
-       </div>
+      <ion-content>
+        <group-home-page
+          [selectedGroup]="group"
+          [modal]="modal"></group-home-page>
       </ion-content>
     </ng-template>
   </ion-modal>
@@ -97,7 +40,7 @@
 
 <ion-footer>
   <ion-item lines="none">
-    <ion-input placeholder="Type a message" [(ngModel)]="message.text"></ion-input>
+    <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     <ion-icon name="send" (click)="sendMessage()"></ion-icon>
   </ion-item>
 </ion-footer> 
