--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -17,7 +17,7 @@
             </ion-item>
 
             <ion-item-options>
-                <ion-item-option color="danger" (click)="removeGoal( goal.id )">Delete</ion-item-option>
+                <ion-item-option color="danger" (click)="confirmDelete( goal.id! )">Delete</ion-item-option>
             </ion-item-options>
 
         </ion-card>
