--- a/src/app/pages/otheruser/otheruser.page.scss
+++ b/src/app/pages/otheruser/otheruser.page.scss
@@ -5,6 +5,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
+    margin:0px;
+    border-radius: 0px;
     ion-item {
         --padding-top: 10px;
         --padding-start: 0;
@@ -41,6 +44,10 @@
         margin-top: 10px;
         margin-bottom: 10px;
         padding: 10px;
+    }
+
+    .back-button {
+        width: 100%;
     }
 }
 
