--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -2,53 +2,51 @@
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title>Profile</ion-title>
+      <!-- <ion-title>Profile</ion-title> -->
       <ion-icon name="create-outline" routerLink="/setprofile" style="filter: none;" slot="end">
         <ion-label>Edit</ion-label>
       </ion-icon>
-
-      <!-- <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon> -->
-      
-        <!-- <ion-item class="editProfile-button" slot="end">
-        <ion-title class="header">Edit</ion-title> -->
-      <!-- </ion-item> -->
     </ion-item>
-  </ion-toolbar>
-</ion-header>
-   
-<ion-content> 
 
-  <div class="flex-center image-container">   
-    <ion-img src={{ProfilePicture$}} alt="logo-image" class="image rounded-circle"></ion-img>
-</div>
+    <div class="flex-center image-container">   
+      <ion-img src={{ProfilePicture$}} alt="logo-image" class="image rounded-circle"></ion-img>
+    </div>
+  
+    <div class="flex-center">
+      <ion-label class="label" style="padding-top: 2%; font-weight: bold; font-size: 1.5rem;">{{displayName$}}</ion-label>
+    </div>
+    
+    <!-- <ion-row>
+      <ion-col style="display: flex;">
+        <ion-label style="margin:auto;">{{myBio$}}</ion-label>
+      </ion-col>
+    </ion-row> -->
 
   
-  <div class="flex-center">
-    <ion-label class="label" style="padding-top: 2%; font-weight: bold; font-size: 1.5rem;">{{displayName$}}</ion-label>
-  </div>
 
-  <!-- <div class="flex-center" href = size = "small">Edit</div> -->
-  <p class="flex-center">
-    <ion-card class="ion-text-center zoom-card">
-      <ion-card-header>
-        <ion-card-subtitle>Bio</ion-card-subtitle>
-      </ion-card-header>
+    <!-- <ion-label class="bio-content">
+      {{myBio$}}
+    </ion-label> -->
+  
+    <ion-row>
+      <ion-col size="6" routerLink="/friends">
+        <ion-title class="title" style=" margin-left: 40px">{{friendsSize}}<br>Friends</ion-title>
+      </ion-col>
+      <ion-col size="6" (click)="Groups()" >
+        <ion-title class="title" >{{groups$}}<br>Groups</ion-title>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+  <!-- <div style="display: flex; justify-content: center;"> -->
+    <ion-label>
+      {{myBio$}}
+    </ion-label>
+  <!-- </div> -->
+  
+</ion-header>
 
-      <ion-card-content class="bio-content">
-        {{myBio$}}
-      </ion-card-content>
-    </ion-card>
-  </p>
-
-    
-  <ion-row>
-    <ion-col size="6" routerLink="/friends">
-      <ion-title class="title" style=" margin-left: 40px">{{friendsSize}}<br>Friends</ion-title>
-    </ion-col>
-    <ion-col size="6" (click)="Groups()" >
-      <ion-title class="title" >{{groups$}}<br>Groups</ion-title>
-    </ion-col>
-  </ion-row>
+   
+<ion-content> 
  <br>
  <br>
  <br>
