--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -62,3 +62,8 @@ ion-header{
     border: radius 50px;
 
 }
+
+.right-align-label {
+    display: flex;
+    justify-content: flex-end; /* Align the content to the right */
+  }
