--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -16,23 +16,23 @@
     
   <div *ngIf="noticeamount > 0" >
   <ion-card class="Mcard" *ngFor="let notice of noticeList2">
-    <div>{{"&nbsp;".repeat(85)}}<ion-button fill="clear" size="small" (click)="clearNotification(notice.id!)" style="color: black;"><ion-icon name="close-circle-outline" size="small"></ion-icon></ion-button></div>
+    <div class="right-align-label"><ion-button fill="clear" size="small" (click)="clearNotification(notice.id!)" style="color: black;"><ion-icon name="close-circle-outline" size="small"></ion-icon></ion-button></div>
     <ion-card-content style="display:flex ; align-items:center" >
   <ion-avatar slot="start">
     <img alt="Silhouette of a person's head" src={{notice.profileurl}} />
   </ion-avatar>
   <ion-grid>
     <ion-row>
-  <ion-label class="Bcard"><b>&nbsp;&nbsp;{{notice.sendername}}</b></ion-label>
+  <ion-label class="Bcard"><b>&nbsp;{{notice.sendername}}</b></ion-label>
    </ion-row>  
-  <ion-label class="Bcard">&nbsp;&nbsp;{{notice.message}}</ion-label>
+  <ion-label class="Bcard">&nbsp;{{notice.message}}</ion-label>
 </ion-grid>
 </ion-card-content>
 <div class="flex-center3" *ngIf="notice.message == 'Sent you a Friend Request!'">
 <ion-button size="small" (click)="addFriend(notice)">Accept</ion-button>
 <ion-button size="small" (click)="clearNotification(notice.id!); rejectFriendRequest(notice , notice.senderid! , notice.senttoid!);">Reject</ion-button>
 </div>
-<ion-label>{{"&nbsp;".repeat(87)}}{{notice.sentdate}}</ion-label>
+<ion-label class="right-align-label">{{notice.sentdate}}</ion-label>
 
 </ion-card>
 </div>
