--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -1,7 +1,7 @@
 <ion-header style="background-color: #E63946;">
   <ion-toolbar>
     <ion-item lines="none">
-      <ion-back-button class="larger-back-button"></ion-back-button>
+      <backbutton slot="start"></backbutton>
       <ion-title style="margin-left: 0rem;">Health Data</ion-title>
     </ion-item>
   </ion-toolbar>
