--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -1,39 +1,44 @@
 <ion-content [fullscreen]="true" *ngIf="user!=null">
   <ion-card class="otheruser-profile">
-    <div class="back-button">
-      <ion-item lines="none">
-        <backbutton class="larger-back-button" slot="start"></backbutton>
-      </ion-item>
-    </div>
-    <ion-item>
-      <ion-avatar>
-        <img src="{{user!.profileURL}}"/>
-      </ion-avatar>
-    </ion-item>
-    <ion-item id="userName">
-        {{user!.displayName}}
-    </ion-item>
-    <ion-item>
-        <ion-button *ngIf="friendshipStatus && !isRequested()" (click)="removeFriend()">
+    <div class="profile-outer-container">
+      <div class="back-button">
+        <ion-buttons>
+          <backbutton slot="start"></backbutton>
+        </ion-buttons>
+      </div>
+      <div class="profile-img-container">
+        <ion-avatar class="profile-image">
+          <ion-img [src]="user!.profileURL"></ion-img>
+        </ion-avatar>
+      </div>
+      <ion-label class="profile-label">
+        <div class="name">
+          <h1>{{user!.displayName}}.</h1>
+        </div>
+        <div class="bio">
+          <p>{{user.bio}}.</p>
+        </div>
+      </ion-label>
+      <div class="group-buttons">
+        <ion-button fill="outline" *ngIf="friendshipStatus && !isRequested()" (click)="removeFriend()">
           <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
           Remove friend
         </ion-button>
-        <ion-button *ngIf="!friendshipStatus && !isRequested()" (click)="addFriend()">
+        <ion-button fill="outline" *ngIf="!friendshipStatus && !isRequested()" (click)="addFriend()">
           <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
           Add friend
         </ion-button>
-        <ion-button *ngIf="isRequested()" [disabled]="true">
+        <ion-button fill="outline" *ngIf="isRequested()" [disabled]="true">
           <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
           requested
         </ion-button>
-    </ion-item>
-    <ion-item id="userBio">
-      {{user!.bio}}
-    </ion-item>
+      </div>
+    </div>
+   
     <div class="otheruser-profile-activity">
       <div class="slide-header">
-        <h2>
-          <ion-icon name="trophy"></ion-icon> Activities
+        <h2 class="slides-headers first-header">
+          <ion-icon name="body"></ion-icon> Activities
         </h2>
       </div>
       <swiper-container [slidesPerView]="2" centered-slides="true"  pagination="{hideOnClick: true}">
@@ -48,6 +53,16 @@
           </ion-card>
         </swiper-slide>
         <swiper-slide>
+          <ion-card>
+            <ion-card-content>
+              <ion-card-title>
+                <ion-icon name="people-outline"></ion-icon>
+              </ion-card-title>
+              <h2>0 Groups</h2>
+            </ion-card-content>
+          </ion-card>
+        </swiper-slide>
+        <swiper-slide>
           <ion-card (click)="viewSchedules()">
             <ion-card-content>
               <ion-card-title>
@@ -57,20 +72,10 @@
             </ion-card-content>
           </ion-card>
         </swiper-slide>
-        <swiper-slide>
-          <ion-card>
-            <ion-card-content>
-              <ion-card-title>
-                <ion-icon name="barbell-outline"></ion-icon>
-              </ion-card-title>
-              <h2>0 Groups</h2>
-            </ion-card-content>
-          </ion-card>
-        </swiper-slide>
       </swiper-container>
       
       <div class="slide-header">
-        <h2>
+        <h2 class="slides-headers">
           <ion-icon name="trophy"></ion-icon> Achievements
         </h2>
       </div>
