--- a/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
+++ b/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
@@ -112,3 +112,13 @@
     border-radius: 100%;
     box-shadow: 0px 6px 6px -3px rgb(0 0 0 / 20%), 0px 10px 14px 1px rgb(0 0 0 / 14%), 0px 4px 18px 3px rgb(0 0 0 / 12%);
   }
+
+.profile-img-container  {
+  width: fit-content;
+  margin: auto;
+}
+.profile-image {
+  height: 150px;
+  width: 150px;
+  margin-bottom: 20px;
+}
