--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -1,5 +1,5 @@
 .user-message {
-  background-color: #f0f0f0;
+  background-color: #A8DADC; //#f0f0f0; 
   border-radius: 15px;
   padding: 10px;
   margin-bottom: 10px;
@@ -21,8 +21,8 @@ ion-footer{
 }
 
   .bot-message {
-   background-color: #e51b1b;
-   color: #ffffff;
+   background-color: #e2e6e9; //#e51b1b;
+   color: #000;
    border-radius: 15px;
    padding: 10px;
    margin-left: auto; 
